--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
+    "build": "react-scripts build",
+    "build:vercel": "chmod +x build.sh && ./build.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
